--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,8 @@ if (CMAKE_BUILD_TYPE MATCHES "^[Rr]elease")
   set(SPARTA_BUILD_TYPE "release")
   target_link_options    (olympia PUBLIC -flto)
   target_compile_options (olympia PUBLIC -flto)
+elseif (CMAKE_BUILD_TYPE MATCHES "^[Ff]ast[Dd]ebug")
+  set(SPARTA_BUILD_TYPE "release")
 elseif (CMAKE_BUILD_TYPE MATCHES "^[Dd]ebug")
   set(SPARTA_BUILD_TYPE "debug")
 elseif (CMAKE_BUILD_TYPE MATCHES "^[Pp]rofile")
