--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,17 @@ add_compile_options ( -Werror
   -Wuninitialized -Wno-sequence-point -Wno-inline -Wno-unknown-pragmas
   -Woverloaded-virtual -Wno-unused-parameter -Wno-missing-field-initializers -pipe)
 
+################################################################################
+# Set up Sparta
 if (NOT SPARTA_BASE)
   message (FATAL_ERROR "Need to define the location of the Sparta: cmake <args> -DSPARTA_BASE=\"/path/to/sparta\"")
 endif ()
 include (${SPARTA_BASE}/cmake/sparta-config.cmake)
+
+################################################################################
+# Set up STF library
+set (STF_LIB_BASE ${PROJECT_SOURCE_DIR}/stf_lib)
+include(${STF_LIB_BASE}/cmake/stf-config.cmake)
 
 # Use ccache if we've got it.
 find_program (CCACHE_PROGRAM ccache)
@@ -66,14 +73,23 @@ set(CMAKE_CXX_FLAGS_PROFILE "-O3 -pg -g -ftime-trace")
 set(CMAKE_CXX_FLAGS_FASTDEBUG "-g")
 
 # Include directories
-include_directories (core mss mavis)
+include_directories (core mss)
+include_directories (SYSTEM mavis)
+include_directories (SYSTEM stf_lib)
 include_directories (SYSTEM ${SPARTA_BASE})
 include_directories (SYSTEM ${SPARTA_BASE}/simdb/include)
 
-# Sparta linking
+# Add STF library to the build
+add_subdirectory (${STF_LIB_BASE})
+
+# Add testing, but do not build as part of the 'all' target
+add_subdirectory (test EXCLUDE_FROM_ALL)
+
+# Sparta/STF linking
 target_link_directories (olympia PUBLIC
   ${SPARTA_BASE}/${SPARTA_BUILD_TYPE}
   ${SPARTA_BASE}/${SPARTA_BUILD_TYPE}/simdb
+  ${STF_LINK_LIBS}
   )
 target_link_libraries (olympia ${Sparta_LIBS})
 
@@ -81,6 +97,3 @@ target_link_libraries (olympia ${Sparta_LIBS})
 file(CREATE_LINK ${PROJECT_SOURCE_DIR}/reports    ${CMAKE_CURRENT_BINARY_DIR}/reports         SYMBOLIC)
 file(CREATE_LINK ${PROJECT_SOURCE_DIR}/arches     ${CMAKE_CURRENT_BINARY_DIR}/arches          SYMBOLIC)
 file(CREATE_LINK ${PROJECT_SOURCE_DIR}/mavis/json ${CMAKE_CURRENT_BINARY_DIR}/mavis_isa_files SYMBOLIC)
-
-# Add testing, but do not build as part of the 'all' target
-add_subdirectory (test EXCLUDE_FROM_ALL)
