--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,7 +91,8 @@ target_link_directories (olympia PUBLIC
   ${SPARTA_BASE}/${SPARTA_BUILD_TYPE}
   ${SPARTA_BASE}/${SPARTA_BUILD_TYPE}/simdb
   )
-target_link_libraries (olympia ${STF_LINK_LIBS} ${Sparta_LIBS})
+
+target_link_libraries (olympia ${Sparta_LIBS} ${STF_LINK_LIBS})
 
 # Create a few links like reports and arch directories
 file(CREATE_LINK ${PROJECT_SOURCE_DIR}/reports    ${CMAKE_CURRENT_BINARY_DIR}/reports         SYMBOLIC)
