--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,5 +24,9 @@ add_custom_target (regress_valgrind)
 add_custom_command(TARGET regress          POST_BUILD COMMAND ctest -E ${VALGRIND_TEST_PREFIX} -j${NUM_CORES})
 add_custom_command(TARGET regress_valgrind POST_BUILD COMMAND ctest -R ${VALGRIND_TEST_PREFIX} -D ExperimentalMemCheck -j${NUM_CORES})
 
+include_directories(${PROJECT_SOURCE_DIR}/..)
+
 # Now the tests...
 add_subdirectory(sim)
+add_subdirectory(core/common)
+add_subdirectory(core/dispatch)
