Added Sink/Source Units and a small Dispatch tester

--- a/test/core/dispatch/CMakeLists.txt
+++ b/test/core/dispatch/CMakeLists.txt
@@ -6,8 +6,9 @@ target_link_libraries(Dispatch_test core common_test ${STF_LINK_LIBS} ${Sparta_L
 include(${SPARTA_BASE}/test/TestingMacros.cmake)
 
 file(CREATE_LINK ${SIM_BASE}/mavis/json ${CMAKE_CURRENT_BINARY_DIR}/mavis_isa_files SYMBOLIC)
-file(CREATE_LINK ${SIM_BASE}/sim/arch   ${CMAKE_CURRENT_BINARY_DIR}/arch SYMBOLIC)
+file(CREATE_LINK ${SIM_BASE}/arches     ${CMAKE_CURRENT_BINARY_DIR}/arches          SYMBOLIC)
+file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/test_core.yaml   ${CMAKE_CURRENT_BINARY_DIR}/test_core.yaml SYMBOLIC)
+file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/expected_output  ${CMAKE_CURRENT_BINARY_DIR}/expected_output SYMBOLIC)
 
 # Single add per cycle
-sparta_named_test(Dispatch_test_Run_Single Dispatch_test single_test_output
-  -r 1000 ${ONE_INST_PER_ROB_ENTRY})
+sparta_named_test(Dispatch_test_Run_Single Dispatch_test single_test_output -c test_core.yaml)
