Added support for multiple exe units in Dispatch; updated big/med core yamls

--- a/arches/medium_core.yaml
+++ b/arches/medium_core.yaml
@@ -2,15 +2,15 @@
 #
 # Set up the pipeline for a 3-wide machine
 #
-top.cpu:
-  fetch.num_to_fetch:   3
-  decode.num_to_decode: 3
-  rename.num_to_rename: 3
-  dispatch.num_to_dispatch: 3
-  rob.num_to_retire:    3
+#top.cpu:
+#  fetch.num_to_fetch:   3
+#  decode.num_to_decode: 3
+#  rename.num_to_rename: 3
+#  dispatch.num_to_dispatch: 3
+#  rob.num_to_retire:    3
 
-top.cpu.extension.pipe_topology:
-  [["alu", "3"].
+top.cpu.core0.extension.core_extensions:
+  execution_topology:
+  [["alu", "3"],
    ["fpu", "2"],
-   ["br",  "1"],
-   ["lsu", "1"]]
+   ["br",  "1"]]
