Dynamic ExecutePipe creation is now working

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(core
   Dispatch.cpp
   Dispatcher.cpp
   Execute.cpp
+  ExecutePipe.cpp
   Inst.cpp
   InstArchInfo.cpp
   InstGroup.cpp
