--- a/arches/big_core.yaml
+++ b/arches/big_core.yaml
@@ -2,12 +2,12 @@
 #
 # Set up the pipeline for a 8-wide machine
 #
-#top.cpu:
-#  fetch.num_to_fetch:   8
-#  decode.num_to_decode: 8
-#  rename.num_to_rename: 8
-#  dispatch.num_to_dispatch: 8
-#  rob.num_to_retire:    8
+top.cpu.core0:
+  fetch.params.num_to_fetch:   8
+  decode.params.num_to_decode: 8
+  rename.params.num_to_rename: 8
+  dispatch.params.num_to_dispatch: 8
+  rob.params.num_to_retire:    8
 
 top.cpu.core0.extension.core_extensions:
   execution_topology:
