--- a/arches/medium_core.yaml
+++ b/arches/medium_core.yaml
@@ -2,12 +2,12 @@
 #
 # Set up the pipeline for a 3-wide machine
 #
-#top.cpu:
-#  fetch.num_to_fetch:   3
-#  decode.num_to_decode: 3
-#  rename.num_to_rename: 3
-#  dispatch.num_to_dispatch: 3
-#  rob.num_to_retire:    3
+top.cpu.core0:
+  fetch.params.num_to_fetch:   3
+  decode.params.num_to_decode: 3
+  rename.params.num_to_rename: 3
+  dispatch.params.num_to_dispatch: 3
+  rob.params.num_to_retire:    3
 
 top.cpu.core0.extension.core_extensions:
   execution_topology:
