--- a/arches/small_core.yaml
+++ b/arches/small_core.yaml
@@ -2,12 +2,12 @@
 #
 # Set up the pipeline for a 2-wide machine
 #
-#top.cpu:
-#  fetch.num_to_fetch:   2
-#  decode.num_to_decode: 2
-#  rename.num_to_rename: 2
-#  dispatch.num_to_dispatch: 2
-#  rob.num_to_retire:    2
+top.cpu.core0:
+  fetch.params.num_to_fetch:   2
+  decode.params.num_to_decode: 2
+  rename.params.num_to_rename: 2
+  dispatch.params.num_to_dispatch: 2
+  rob.params.num_to_retire:    2
 
 top.cpu.core0.extension.core_extensions:
   execution_topology:
