Updated README; PR feedback; arch DL1 cache size changes

--- a/arches/medium_core.yaml
+++ b/arches/medium_core.yaml
@@ -8,6 +8,8 @@ top.cpu.core0:
   rename.params.num_to_rename: 3
   dispatch.params.num_to_dispatch: 3
   rob.params.num_to_retire:    3
+  lsu.params:
+    dl1_size_kb: 32
 
 top.cpu.core0.extension.core_extensions:
   execution_topology:
