--- a/test/sim/CMakeLists.txt
+++ b/test/sim/CMakeLists.txt
@@ -40,3 +40,13 @@ sparta_named_test(olympia_dhry_test_report_html olympia -i 1M
   --report-search-dir reports
   --report reports/core_report.def
   --workload traces/dhrystone.zstf)
+
+# Test the arches
+file(GLOB TEST_YAML "${SIM_BASE}/arches/*.yaml")
+foreach(ARCH_FULL_PATH ${TEST_YAML})
+  get_filename_component(ARCH_FILE_NAME ${ARCH_FULL_PATH} NAME)
+  string(REGEX REPLACE ".yaml" "" ARCH_NAME ${ARCH_FILE_NAME})
+  sparta_named_test(olympia_arch_${ARCH_NAME}_test olympia
+    -i500K --workload traces/dhrystone.zstf
+    --arch ${ARCH_NAME})
+endforeach()
