--- a/arches/big_core.yaml
+++ b/arches/big_core.yaml
@@ -2,15 +2,17 @@
 #
 # Set up the pipeline for a 8-wide machine
 #
-top.cpu:
-  fetch.num_to_fetch:   8
-  decode.num_to_decode: 8
-  rename.num_to_rename: 8
-  dispatch.num_to_dispatch: 8
-  rob.num_to_retire:    8
+top.cpu.core0:
+  fetch.params.num_to_fetch:   8
+  decode.params.num_to_decode: 8
+  rename.params.num_to_rename: 8
+  dispatch.params.num_to_dispatch: 8
+  rob.params.num_to_retire:    8
+  lsu.params:
+    dl1_size_kb: 64
 
-top.cpu.extension.pipe_topology:
-  [["alu", "6"].
+top.cpu.core0.extension.core_extensions:
+  execution_topology:
+  [["alu", "6"],
    ["fpu", "2"],
-   ["br",  "2"],
-   ["lsu", "1"]]
+   ["br",  "2"]]
