--- a/arches/small_core.yaml
+++ b/arches/small_core.yaml
@@ -2,15 +2,17 @@
 #
 # Set up the pipeline for a 2-wide machine
 #
-top.cpu:
-  fetch.num_to_fetch:   2
-  decode.num_to_decode: 2
-  rename.num_to_rename: 2
-  dispatch.num_to_dispatch: 2
-  rob.num_to_retire:    2
+top.cpu.core0:
+  fetch.params.num_to_fetch:   2
+  decode.params.num_to_decode: 2
+  rename.params.num_to_rename: 2
+  dispatch.params.num_to_dispatch: 2
+  rob.params.num_to_retire:    2
+  lsu.params:
+    dl1_size_kb: 16
 
-top.cpu.extension.pipe_topology:
-  [["alu", "2"].
-   ["fpu", "1"],
-   ["br",  "1"],
-   ["lsu", "1"]]
+top.cpu.core0.extension.core_extensions:
+  execution_topology:
+    [["alu", "1"],
+     ["fpu", "1"],
+     ["br",  "1"]]
