Get some latency matrices for scoreboards

--- a/arches/big_core.yaml
+++ b/arches/big_core.yaml
@@ -16,3 +16,34 @@ top.cpu.core0.extension.core_extensions:
   [["alu", "6"],
    ["fpu", "2"],
    ["br",  "2"]]
+
+top.cpu.core0.rename.scoreboards:
+  # From
+  # |
+  # V
+  integer.params.latency_matrix: |
+    [["",     "alu0", "alu1", "alu2", "alu3", "alu4", "alu5", "fpu0", "fpu1", "br0", "br1"],   # <-- TO
+     ["alu0",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"],
+     ["alu1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"],
+     ["alu2",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"],
+     ["alu3",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"],
+     ["alu4",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"],
+     ["alu5",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"],
+     ["fpu0",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"],
+     ["fpu1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"],
+     ["br0",     "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"],
+     ["br1",     "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"]]
+
+  float.params.latency_matrix: |
+    [["",     "alu0", "alu1", "alu2", "alu3", "alu4", "alu5", "fpu0", "fpu1", "br0", "br1"],   # <-- TO
+     ["alu0",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"],
+     ["alu1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"],
+     ["alu2",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"],
+     ["alu3",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"],
+     ["alu4",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"],
+     ["alu5",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"],
+     ["fpu0",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"],
+     ["fpu1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"],
+     ["br0",     "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"],
+     ["br1",     "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",   "1"]]
+
