--- a/arches/small_core.yaml
+++ b/arches/small_core.yaml
@@ -16,3 +16,19 @@ top.cpu.core0.extension.core_extensions:
     [["alu", "1"],
      ["fpu", "1"],
      ["br",  "1"]]
+
+top.cpu.core0.rename.scoreboards:
+  # From
+  # |
+  # V
+  integer.params.latency_matrix: |
+    [["",     "alu0", "fpu0", "br0"],   # <-- TO
+     ["alu0",    "1",    "1",   "1"],
+     ["fpu0",    "1",    "1",   "1"],
+     ["br0",     "1",    "1",   "1"]]
+
+  float.params.latency_matrix: |
+    [["",     "alu0", "fpu0", "br0"],
+     ["alu0",    "1",    "1",   "1"],
+     ["fpu0",    "1",    "1",   "1"],
+     ["br0",     "1",    "1",   "1"]]
