tell cmake to include boost libs

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -20,3 +20,4 @@ add_library(core
   CPUFactory.cpp
   CPUTopology.cpp
   )
+  target_include_directories(core SYSTEM PRIVATE ${Boost_INCLUDE_DIRS})
