fixed boost include for tests

--- a/test/core/common/CMakeLists.txt
+++ b/test/core/common/CMakeLists.txt
@@ -4,3 +4,4 @@ project(common_test)
 add_library(common_test
   SourceUnit.cpp
   )
+target_include_directories(common_test SYSTEM PRIVATE ${Boost_INCLUDE_DIRS})
