using the FindSparta.cmake which sparta installs to find libs and includes

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -21,3 +21,4 @@ add_library(core
   CPUTopology.cpp
   )
 target_include_directories(core SYSTEM PRIVATE ${Boost_INCLUDE_DIRS})
+target_link_libraries(core PUBLIC SPARTA::sparta)
