--- a/mss/CMakeLists.txt
+++ b/mss/CMakeLists.txt
@@ -4,3 +4,4 @@ add_library(mss
   MSS.cpp
   )
 target_include_directories(mss SYSTEM PRIVATE ${Boost_INCLUDE_DIRS})
+target_link_libraries(mss PUBLIC SPARTA::sparta)
