--- a/.github/workflows/ubuntu-build.yml
+++ b/.github/workflows/ubuntu-build.yml
@@ -33,6 +33,7 @@ jobs:
       # Go get Olympia
       - name: Checkout Olympia
         uses: actions/checkout@v3
+        with:
           submodules: recursive
 
       #
