--- a/.github/workflows/ubuntu-build.yml
+++ b/.github/workflows/ubuntu-build.yml
@@ -23,6 +23,7 @@ jobs:
       OLYMPIA_BUILD_TYPE: ${{ matrix.BUILD_TYPE }}
 
     steps:
+
       # Get Sparta
       - name: Checkout Sparta
         uses: actions/checkout@v3
@@ -37,12 +38,12 @@ jobs:
           submodules: recursive
 
       # Setup Conda and build environment
-      - name: Grab Pythong v3.8
+      - name: Grab Python v3.8
         uses: actions/setup-python@v3
         with:
           python-version: 3.8
 
-      -name: Setup Conda Environment
+      - name: Setup Conda Environment
         run: |
           # $CONDA is an environment variable pointing to the root of the miniconda directory
           $CONDA/bin/conda env create --file  ${{ github.workspace }}/conda/environment.yml
