--- a/.github/workflows/ubuntu-build.yml
+++ b/.github/workflows/ubuntu-build.yml
@@ -13,7 +13,7 @@ jobs:
       # Strategy is a matrix of debug and release builds/regression
       matrix:
         os: [ubuntu-latest]
-        BUILD_TYPE: [Debug,Release]
+        BUILD_TYPE: [Debug]
 
     name: Ubuntu-${{ matrix.BUILD_TYPE }}
     runs-on: ${{ matrix.os }}
