--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -30,3 +30,4 @@ include_directories(${PROJECT_SOURCE_DIR}/..)
 add_subdirectory(sim)
 add_subdirectory(core/common)
 add_subdirectory(core/dispatch)
+add_subdirectory(core/rename)
