Finished writing tests, made updates to rename

--- a/test/core/rename/CMakeLists.txt
+++ b/test/core/rename/CMakeLists.txt
@@ -9,8 +9,9 @@ file(CREATE_LINK ${SIM_BASE}/mavis/json ${CMAKE_CURRENT_BINARY_DIR}/mavis_isa_fi
 file(CREATE_LINK ${SIM_BASE}/arches     ${CMAKE_CURRENT_BINARY_DIR}/arches          SYMBOLIC)
 file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/test_cores   ${CMAKE_CURRENT_BINARY_DIR}/test_cores SYMBOLIC)
 file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/expected_output  ${CMAKE_CURRENT_BINARY_DIR}/expected_output SYMBOLIC)
+file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/rename_multiple_instructions.json  ${CMAKE_CURRENT_BINARY_DIR}/rename_multiple_instructions.json SYMBOLIC)
 
 # Single add per cycle
-sparta_named_test(Rename_test_Run_Small  Rename_test small_core.out -c test_cores/test_small_core.yaml)
-sparta_named_test(Rename_test_Run_Medium Rename_test medium_core.out -c test_cores/test_medium_core.yaml)
-sparta_named_test(Rename_test_Run_Big    Rename_test big_core.out -c test_cores/test_big_core.yaml)
+sparta_named_test(Rename_test_Run_Small  Rename_test small_core.out -c test_cores/test_small_core.yaml --input-file rename_multiple_instructions.json)
+sparta_named_test(Rename_test_Run_Medium Rename_test medium_core.out -c test_cores/test_medium_core.yaml --input-file rename_multiple_instructions.json)
+sparta_named_test(Rename_test_Run_Big    Rename_test big_core.out -c test_cores/test_big_core.yaml --input-file rename_multiple_instructions.json)
